Fix spacing after adding labels

--- a/src/main/less/main.less
+++ b/src/main/less/main.less
@@ -439,6 +439,7 @@ button.delete-btn:not(.confirm) {
 
 .question-group-section {
   border-bottom: 1px solid #eee;
+  padding-bottom: 20px;
 }
 
 .question-group-title {
@@ -451,21 +452,12 @@ button.delete-btn:not(.confirm) {
   padding: 15px 0px;
 
   .question {
-    margin-top: 20px;
-    margin-bottom: 20px;
-
-    &:first-child {
-      margin-top: 0;
-    }
+    margin-top: 10px;
 
     .title {
+      line-height: 2em;
       display: inline-block;
-      margin-top: 10px;
     }
-  }
-
-  .instruction {
-    margin-bottom: 5px;
   }
 
   .answer {
@@ -501,7 +493,6 @@ button.delete-btn:not(.confirm) {
 label.title {
   font-weight: bold;
   color: #444;
-  margin-bottom: 5px;
 }
 
 .badge {
